--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "dicoding-backend-project",
   "version": "1.0.0",
   "description": "",
-  
   "scripts": {
-    "start": "nodemon ./src/server.js"
+    "start": "node src/server.js",
+    "start-dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/hapi": "^21.3.2"
+    "@hapi/hapi": "^21.3.2",
+    "nanoid": "^3.3.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
